force-app/main/default/objects/AreaUnionInfo__c/AreaUnionInfo__c.object-meta.xml
<CustomObject>
    <label>AreaUnionInfo</label>
    <nameField>
        <label>AreaUnionInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AreaUnionInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>