force-app/main/default/objects/AreaUnionInfo__c/fields/AreaBeginDate__c.field-meta.xml
<CustomField>
    <fullName>AreaBeginDate__c</fullName>
    <description>Area Begin Date(This field was created for NPL MA).</description>
    <label>AreaBeginDate</label>
    <type>Date</type>
</CustomField>