force-app/main/default/objects/AreaUnionInfo__c/fields/Areacode__c.field-meta.xml
<CustomField>
    <fullName>Areacode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Area code(This field was created for NPL MA).</description>
    <label>Areacode</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>AreaUnionInfos</relationshipLabel>
    <relationshipName>AreaUnionInfos</relationshipName>
    <type>Lookup</type>
</CustomField>