force-app/main/default/objects/AreaUnionInfo__c/fields/AreaEndDate__c.field-meta.xml
<CustomField>
    <fullName>AreaEndDate__c</fullName>
    <description>Area End Date(This field was created for NPL MA).</description>
    <label>AreaEndDate</label>
    <type>Date</type>
</CustomField>