force-app/main/default/objects/AreaUnionInfo__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Class code(This field was created for NPL MA).</description>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>AreaUnionInfos</relationshipLabel>
    <relationshipName>AreaUnionInfos</relationshipName>
    <type>Lookup</type>
</CustomField>