force-app/main/default/objects/AreaUnionInfo__c/fields/Craft__c.field-meta.xml
<CustomField>
    <fullName>Craft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Craft code(This field was created for NPL MA).</description>
    <label>Craft</label>
    <referenceTo>Craft__c</referenceTo>
    <relationshipLabel>AreaUnionInfos</relationshipLabel>
    <relationshipName>AreaUnionInfos</relationshipName>
    <type>Lookup</type>
</CustomField>