force-app/main/default/objects/AreaUnionInfo__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>This field displays the Rate for Union, Class and Craft(This field was created for NPL MA).</description>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>