force-app/main/default/objects/AreaUnionInfo__c/fields/UnionBeginDate__c.field-meta.xml
<CustomField>
    <fullName>UnionBeginDate__c</fullName>
    <description>Union Begin Date(This field was created for NPL MA).</description>
    <label>UnionBeginDate</label>
    <type>Date</type>
</CustomField>