force-app/main/default/objects/AreaUnionInfo__c/fields/UnionEndDate__c.field-meta.xml
<CustomField>
    <fullName>UnionEndDate__c</fullName>
    <description>Union End Date(This field was created for NPL MA).</description>
    <label>UnionEndDate</label>
    <type>Date</type>
</CustomField>