force-app/main/default/objects/AreaUnionInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Areacode__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>